# math-bicycle

./: CMakeLists.txt
math-bicycle/: CMakeLists.txt  math-bicycle.cpp
math-bicycle/src/: Color.h  ExpotentialFunction.h  Function.h  Matrix.h  Matrix.hpp  Point.h  PolynomicFunction.h  RationalFunction.h  Vector.h  Vector.hpp  vector2.h
math-bicycle/src/utils/: Fonts.h  Image.h  XYPlot.h
math-bicycle/tasks/: CMakeLists.txt
math-bicycle/tasks/black-box/: BlackBox.h  BlackBoxModel.cpp  BlackBoxModel.h
math-bicycle/tests/: Matrix_test.cc  PolynomicFunction_test.cc  RationalFunction_test.cc  Vector_test.cc
